Wed Apr 15 02:44:58 1998  George Lebl  <jirka@5z.com>

	* plug-ins/film/film.c: del_list_item_callback was calling
	  gtk_widget_destroy on an already unrefed widget

Wed Apr 15 02:03:25 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/disp_callbacks.c: disable keyboard accelerators
	during mouse image operations, so nothing funky happens
	in the middle of a motion (like converting image types
	or running a plugin)

Wed Apr 15 01:58:12 EDT 1998 Matthew Wilson <msw@gimp.org>

	* app/gdisplay.c: made a change to gdisplays_update_area to
	update _all_ gdisplays that point at the gimage ID.  This
	(should) fix the paint on the second layer of a second view bug.

Tue Apr 14 16:15:52 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/iscissors.c: partially applied gimp-monniaux-980413-0,
	corrects nonfunctional interface elements

Tue Apr 14 18:01:50 EDT 1998 Matthew Wilson <msw@gimp.org>

	* app/gdisplay.c: Set active_tool->drawable to NULL when destroying
	the gdisplay that the active tool points to.
	* app/giamge.c: Fixed spacing...

Tue Apr 14 13:40:07 PDT 1998 Manish Singh <yosh@gimp.org>

	* gradient.c: handle delete_event for color selector properly

	* plug-ins/webbrowser/web-browser.scm: updated link to the bugs
	page

Tue Apr 14 20:36:26 MEST 1998 Sven Neumann <sven@gimp.org>

	* gimp_tips.txt: applied gimp-quinet-980414-0; adds new tips
	* plug-ins/pagecurl/pagecurl.c: applied gimp-quinet-980414-1;
	defines M_PI
	* app/app_procs.c: applied gimp-quinet-980414-2; adds more 
	information to the startup screen
	* app/regex.c
	* plugins/script-fu/regex.c: partially applied
	gimp-jbuhler-980412-0; adds braces to nested if/else

Tue Apr 14 10:11:04 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/global_edit.c: Named cut and copy are now performed after 
	the user is asked for a name, so cancelling the dialog works 
	correctly. 

Mon Apr 13 15:17:51 PDT 1998 Manish Singh <yosh@gimp.org>

	* moved man page from docs to top-level so it's always installed
